fix alignments,spacings and remove unnecessary stuff

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 * {
   box-sizing: border-box;
 }
+
 body {
  font-family: Verdana, Arial, Helvetica, sans-serif;
 }
@@ -10,37 +11,45 @@ body {
 h1 {
   margin-bottom: 15px;
   text-align: center;
+  text-transform: uppercase;
 }
 
 p {
-  border: 2px solid black;
-  background-color: #b1f2ff;
+  display: block;
+  color: black;
+  font-size: 120%;
   width: 100%;
-  /*height: 160px;*/
-  font-family: Helvetica;
-  color: #000000;
+  border: 2px solid black;
+  border-radius: 8px;
+  background-color: #b1f2ff;
   padding-left: 5px;
   padding-top: 40px;
+  padding-bottom: 5px;
+  margin-bottom: auto;
+  margin-top: auto;
+  overflow: auto;
 }
 
-#b1, #b2, #b3 {
-  position: relative;
+section {
+    position: relative;
+    padding: 10px;
 }
 
-#t1, #t2, #t3 {
+div {
   position: absolute;
   top: 0px;
-  right: 1px;
+  right: 0px;
   padding: 10px;
 }
 
-div > div > div > p {
+.items {
   width: 100px;
   height: 35px;
-  color: black;
   padding: 6px;
   text-align: center;
+  text-transform: uppercase;
   font-weight: bold;
+  font-size: 100%;
 }
 
 #p1 {
@@ -55,18 +64,13 @@ div > div > div > p {
   background-color: #c8a2c8;
 }
 
-/* Simple Responsive Framework. */
-.row {
-  width: 100%;
-}
-.card {
-  padding: 10px;
-}
-/********** Large devices only **********/
+/********
+ *** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
   }
+
   .col-lg-1 {
     width: 8.33%;
   }
